# ChangeLog for app-office/openoffice
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/Attic/ChangeLog,v 1.139 2005/10/21 21:27:39 suka Exp $

  21 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  openoffice-2.0.0.ebuild:
  Remove the python use-flag, we are now using system-python by default. Makes
  no sense to have it anyway, as portage needs python, and
  --without-system-python just grows the build and currently results in build
  breakage, see bug #109996

  21 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  openoffice-2.0.0.ebuild:
  Add dependency to >=dev-java/java-config-1.2.11-r1 as some people seem to be
  building OOo 2.0.0 on stable, and the build will fail without the newest
  version of java-config

*openoffice-2.0.0 (20 Oct 2005)

  20 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-2.0.0.ebuild:
  OpenOffice.org 2.0 is ready! All patches moved to upstream, also ppc is
  supported now.

  19 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  files/2.0.0/stlport-vector-ppc-buildfix.diff:
  remove -D_STLP_DEBUG also from gcc-3.0.mak for PPC

  18 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  +files/2.0.0/stlport-vector-ppc-buildfix.diff:
  Add missing patch, ooops.

  18 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  files/2.0.0/gentoo-2.0.0_rc3.diff, openoffice-2.0.0_rc3.ebuild:
  Build fix for stlport on ppc

*openoffice-2.0.0_rc3 (18 Oct 2005)

  18 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  +files/2.0.0/gentoo-2.0.0_rc3.diff, +openoffice-2.0.0_rc3.ebuild:
  New release candidate, also fix the distcc stuff

  12 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  openoffice-2.0.0_rc2.ebuild:
  Fix build problem with certain languages, see bug #108989

  12 Oct 2005; Andreas Proschofsky <suka@gentoo.org>
  files/2.0.0/gentoo-2.0.0_rc2.diff, openoffice-2.0.0_rc2.ebuild:
  Some more cleanups, also depend on libxml2 if building without java. Also